--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,6 @@
 language: cpp
 compiler:
-  - clang
   - gcc
-efore_install:
-  # g++4.8.1
-  - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
-
-  # clang 3.4
-  - if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; fi
-
-  - sudo apt-get update -qq
-
 install:
   - sudo apt-get update
   - sudo apt-get install libcppunit-dev
@@ -18,6 +8,7 @@ before_script:
   - ./waf configure
   - ./waf build
 script:
+  - ./build/default/kuku_test
   - ./build/default/kuku
   - ./build/default/kuku -p
 notifications:
